--- a/challenges/index.html
+++ b/challenges/index.html
@@ -7,8 +7,8 @@
  
     <link rel="stylesheet" href="style.css">
 </head>
-<div class="container">  
-  <div class="hero">
+<div class="intro">
+  <div class="container">
     <div class="intro-content">
         <h1>Lorem ipsum dolor sit.</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem aspernatur distinctio laudantium dolores. Nulla quibusdam reprehenderit eum sit minus aliquid!</p>
@@ -16,7 +16,7 @@
   </div>
 </div>
 
-<div class="more-content">
+<div class="container">
   <h2>more content D:</h2>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, mollitia adipisci magnam voluptatibus repellendus fuga ut repellat exercitationem eaque amet, omnis aliquam fugiat laudantium id dicta at? Consectetur iure porro illum laudantium excepturi a laborum!</p>
   <p>Sit magni soluta porro fugit placeat eius itaque, accusamus quisquam voluptates reiciendis pariatur, vitae molestiae. Minima, quos reprehenderit autem animi, nisi necessitatibus eligendi quis modi, facilis ipsam nihil odit quaerat! Nisi doloribus harum culpa ipsam!</p>
