--- a/challenges/index.html
+++ b/challenges/index.html
@@ -4,19 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Day 01</title>
-
-  <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
-<div class="intro">
-  <div class="container">
-    <div class="intro-content">
-        <h1>Responsive layouts don’t have to be a struggle</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-        <button>I WANT TO LEARN</button>
+<body>  
+  <div class="hero">
+    <div class="container">
+      <div class="hero__text">
+        <h1>Responsive layouts don't have to be a struggle</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque maiores, veniam culpa fuga blanditiis sunt enim ad suscipit commodi aut voluptatem animi, velit quidem!</p>
+        <a href="#" class="btn">I want to learn</a>
+      </div>
     </div>
   </div>
-</div>
+</body>
 </html>
