--- a/examples/index.html
+++ b/examples/index.html
@@ -1,15 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head> 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Day 01</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body>  
+  <div class="hero">
+    <div class="container">
+      <div class="hero__text">
+        <h1>Responsive layouts don't have to be a struggle</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque maiores, veniam culpa fuga blanditiis sunt enim ad suscipit commodi aut voluptatem animi, velit quidem!</p>
+        <a href="#" class="btn">I want to learn</a>
+      </div>
+    </div>
+  </div>
   <div class="container">
-    <h1>Lorem ipsum dolor sit.</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque facilis, repellat reiciendis esse commodi dolorum cupiditate totam incidunt hic!</p>
+    <div class="row">
+      <div class="col">
+        <h2>Cheap</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat repudiandae deleniti hic inventore pariatur rem earum veniam impedit numquam architecto! Corrupti amet veniam nemo officiis.
+        </p>
+      </div>
+      <div class="col">
+        <h2>Quick</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat repudiandae deleniti hic inventore pariatur rem earum veniam impedit numquam architecto! Corrupti amet veniam nemo officiis.
+        </p>
+      </div>
+      <div class="col">
+        <h2>Affordable</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat repudiandae deleniti hic inventore pariatur rem earum veniam impedit numquam architecto! Corrupti amet veniam nemo officiis.
+        </p>
+      </div>
+    </div>
   </div>
 </body>
 </html>
