--- a/challenges/index.html
+++ b/challenges/index.html
@@ -9,13 +9,18 @@
 </head>
   <body>
     <header>
-      <div class="container">
+      <div class="container row">
+        <a class="logo" href="#">
+          <img src="../img/logo.svg" alt="conquering responsive layouts">
+        </a>
         <nav class="nav">
           <ul class="nav__list">
             <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
             <li class="nav__item"><a href="#" class="nav__link">About</a></li>
             <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
-            <li class="nav__item nav__item--push-right"><a href="#" class="nav__link">Sign In</a></li>
+          </ul>
+          <ul class="nav__list">
+            <li class="nav__item"><a href="#" class="nav__link">Sign In</a></li>
             <li class="nav__item"><a href="#" class="nav__link nav__link--button">Sign up</a></li>
           </ul>
         </nav>
