--- a/challenges/index.html
+++ b/challenges/index.html
@@ -1,47 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conquering Rsponsive Layouts</title>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;900&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title></title>
 </head>
-  <body>
-    <section class="hero">
-      <div class="container">
-        <div class="hero__text row">
-          <h2 class="hero__subtitle">lorem ipsum sit</h2>
-          <h1 class="hero__title">Responsive layouts don’t have to be a struggle</h1>
+<body>
+  <section class="intro">
+    <div class="container">
+      <p class="intro__text">lorem ipsum sit</p>
+      <h1 class="intro__title"></h1>
+    </div>
+  </section>
+
+  <section class="section-two">
+    <div class="container">
+      <h2 class="section-title section-title--dark"></h2>
+      <div class="row">
+        <div class="col">
+          <p></p>
+        </div>
+        <div class="col">
+          <p></p>
         </div>
       </div>
-    </section>
-    <article class="article article-primary">
-      <div class="container">
-        <h3 class="article__title article-primary__title">Quality Designs</h3>
-        <div class="main__content row">
-          <p class="article__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dui vivamus arcu felis bibendum ut tristique. Arcu dui vivamus arcu felis. Sociis natoque penatibus et magnis dis.</p>
-          <p class="article__text">Felis donec et odio pellentesque diam volutpat. Aliquam purus sit amet luctus venenatis. Turpis in eu mi bibendum neque egestas congue quisque egestas. Pellentesque sit amet porttitor eget dolor morbi non.</p>
-        </div>
+    </div>
+  </section>
+
+  <section class="section-three">
+    <div class="container row">
+      <div class="col">
+        <h2 class="section-title"></h2>
+        <p></p>
       </div>
-    </article>
-    <article class="article article-secondary">
-      <div class="container row">
-        <div class="article__content">
-          <h3 class="article-secondary__title">Made custom for you</h3>
-          <p class="article-secondary__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-        </div>
-        <img class="article__img" src="../img/image-01.jpg" alt="sunrise over ocean">
+      <div class="col">
+        <img src="../img/image-01.jpg" alt="a sunset over a mountain range">
       </div>
-    </article>
-    <article class="article article-last">
-      <div class="container row">
-        <img class="article__img" src="../img/image-02.jpg" alt="sunrise over ocean">
-        <div class="article__content">
-          <h3 class="article-secondary__title">Created with care</h3>
-          <p class="article-secondary__text">Felis donec et odio pellentesque diam volutpat. Aliquam purus sit amet luctus venenatis. Turpis in eu mi bibendum neque egestas congue quisque egestas. Pellentesque sit amet porttitor eget dolor morbi non.</p>
-        </div>
+    </div>
+  </section>
+
+  <section class="section-four">
+    <div class="container row">
+      <div class="col">
+        <img src="../img/image-02.jpg" alt="a sunset over a mountaine range with tree branches in the foreground">
       </div>
-    </article>
-  </body>
+      <div class="col">
+        <h2 class="section-title"></h2>
+        <p></p>
+      </div>
+    </div>
+  </section>
+</body>
 </html>
