--- a/challenges/index.html
+++ b/challenges/index.html
@@ -7,109 +7,56 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet"> 
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;900&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-</head>
-<<<<<<< HEAD
-<body>
-  <section class="intro">
-    <div class="container">
-      <p class="intro__text">lorem ipsum sit</p>
-      <h1 class="intro__title">Responsive layouts don’t<br>
-        have to be a struggle</h1>
+</head><header>
+  <div class="container row">
+    <button class="nav-toggle" aria-label="open navigation">
+      <span class="hamburger"></span>
+    </button>
+    <a class="logo" href="#">
+      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/308367/logo.svg" alt="">
+    </a>
+    <nav class="nav">
+      <ul class="nav__list nav__list--primary">
+        <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">About</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
+      </ul>
+      <ul class="nav__list nav__list--secondary">
+        <li class="nav__item"><a href="#" class="nav__link">Sign In</a></li>
+        <li class="nav__item"><a href="#" class="nav__link nav__link--button">Sign up</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
+
+<section class="hero">
+  <div class="container row">
+    <div class="hero__text">
+      <h1>Responsive layouts don’t have to be a struggle</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+      <a href="#" class="btn">I want to learn</a>
     </div>
+    <img src="https://unsplash.it/400/300" alt="UX design sketches" class="hero__img">
+  </div>
+</section>
+
+<main class="main container row">
+  <section class="primary-content">
+    <h2 class="section-title">Quality designs made custom, on demand, just for you</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
   </section>
+  <aside class="sidebar">
+    <h2 class="sidebar-title">Cheap</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 
-  <section class="section-two">
-    <div class="container">
-      <h2 class="section-title section-title--dark">Quality Designs</h2>
-      <div class="row">
-        <div class="col">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dui vivamus arcu felis bibendum ut tristique. Arcu dui vivamus arcu felis. Sociis natoque penatibus et magnis dis.</p>
-        </div>
-        <div class="col">
-          <p>Felis donec et odio pellentesque diam volutpat. Aliquam purus sit amet luctus venenatis. Turpis in eu mi bibendum neque egestas congue quisque egestas. Pellentesque sit amet porttitor eget dolor morbi non.</p>
-=======
-  <body>
-    <header>
-      <div class="container row">
-        <button class="nav-toggle" aria-label="open navigation">
-          <span class="hamburger"></span>
-        </button>
-        <a class="logo" href="#">
-          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/308367/logo.svg" alt="">
-        </a>
-        <nav class="nav">
-          <ul class="nav__list nav__list--primary">
-            <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">About</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
-          </ul>
-          <ul class="nav__list nav__list--secondary">
-            <li class="nav__item"><a href="#" class="nav__link">Sign In</a></li>
-            <li class="nav__item"><a href="#" class="nav__link nav__link--button">Sign up</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+    <h2 class="sidebar-title">Quick</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 
-    <section class="hero">
-      <div class="container row">
-        <div class="hero__text">
-          <h1>Responsive layouts don’t have to be a struggle</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-          <a href="#" class="btn">I want to learn</a>
->>>>>>> f033bde (Navigation challenge - files starting point)
-        </div>
-        <img src="https://unsplash.it/400/300" alt="UX design sketches" class="hero__img">
-      </div>
-<<<<<<< HEAD
-    </div>
-  </section>
-
-  <section class="section-three">
-    <div class="container row">
-      <div class="col">
-        <h2 class="section-title">Made custom for you</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-      </div>
-      <div class="col">
-        <img src="../img/image-01.jpg" alt="a sunset over a mountain range">
-      </div>
-    </div>
-  </section>
-
-  <section class="section-four">
-    <div class="container row">
-      <div class="col">
-        <img src="../img/image-02.jpg" alt="a sunset over a mountaine range with tree branches in the foreground">
-      </div>
-      <div class="col">
-        <h2 class="section-title">Created with care</h2>
-        <p>Felis donec et odio pellentesque diam volutpat. Aliquam purus sit amet luctus venenatis. Turpis in eu mi bibendum neque egestas congue quisque egestas. Pellentesque sit amet porttitor eget dolor morbi non.</p>
-      </div>
-    </div>
-  </section>
-</body>
-=======
-    </section>
-
-    <main class="main container row">
-      <section class="primary-content">
-        <h2 class="section-title">Quality designs made custom, on demand, just for you</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-      </section>
-      <aside class="sidebar">
-        <h2 class="sidebar-title">Cheap</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-      
-        <h2 class="sidebar-title">Quick</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-      
-        <h2 class="sidebar-title">Quality</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-      </aside>
-    </main>
+    <h2 class="sidebar-title">Quality</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+  </aside>
+</main>
     <script src="main.js"></script>
   </body>
->>>>>>> f033bde (Navigation challenge - files starting point)
 </html>
