final project - wired up the html

--- a/challenges/index.html
+++ b/challenges/index.html
@@ -3,9 +3,118 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Final Challenge</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <header class=".header">
+    <div class="container row">
+      <button class="nav-toggle" aria-label="open navigation">
+        <span class="hamburger"></span>
+      </button>
+      <a class="logo">
+        <img src="../img/logo.svg" alt="">
+      </a>
+      <nav class="nav">
+        <div class="primary-nav">
+          <ul>
+            <li>home</li>
+            <li>about</li>
+            <li>contact</li>
+          </ul>
+        </div>
+        <div class="secondary-nav">
+          <ul>
+            <li>sign in </li>
+            <li>sign up</li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+  </div>
+  <section class="hero">
+    <div class="container row">
+      <h1>
+        Responsive layouts
+        <span>don't have to be a struggle</span>
+      </h1>
+      <div class="hero-text">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <button class="hero-btn">i want to learn</button>    
+      </div>
+    </div>
+  </section>
+  <main class="main">
+    <section class="container row">
+      <div class="col">
+        <h2>Mobile-first</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+      </div>
+      <div class="col">
+        <h2>Efficient</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+      </div>
+      <div class="col">
+        <h2>Done right</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+      </div>
+    </section>
+  </main>
+  <section class="secondary container row">
+    <div class="col">
+      <h2>It doesn’t have to be so hard</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+      <img src="../img/the-image.jpg" alt="3 drawings of outlines">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+    </div>
+    <aside class="col">
+      <article class="article">
+        <h2>Break it down</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </article>
+      <article class="article">
+        <h2>Work your way up</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </article>
+      <article class="article">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </article>
+    </aside>
+  </section>
+  <footer class="footer">
+    <h1>Just scratching the surface</h1>
+    <div class="footer-text">
+      <h2 class="footer-nav__title">About our company</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+    </div>
+    <nav class="footer-nav">
+      <div class="nav-1">
+        <ul>
+          <li class="footer-nav__title">Getting around</li>
+          <li>Home</li>
+          <li>About</li>
+          <li>Contact</li>
+        </ul>
+      </div>
+      <div class="nav-2">
+        <ul>
+          <li class="footer-nav__title">Other things</li>
+          <li>Lorem ipsum</li>
+          <li>dolor</li>
+          <li>sit amet</li>
+          <li>consectetur</li>
+        </ul>
+      </div>
+      <div class="nav-3">
+        <ul>
+          <li class="footer-nav__title">And more</li>
+          <li>Lorem ipsum</li>
+          <li>dolor</li>
+          <li>sit amet</li>
+          <li>consectetur</li>
+        </ul>
+      </div>  
+    </nav>
+  </footer>
 </body>
 </html>
