--- a/challenge02/index.html
+++ b/challenge02/index.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Day 01</title>
     
-    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="intro">
-        <div class="container">
-            <div class="content">
-                <h1 class="content__title">Responsive layouts don’t have to be a struggle</h1>
-                <p class="content__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-                <button class="main_button">i want to learn</button>
-            </div>
+  <div class="hero">
+    <div class="container">
+        <div class="hero__text">
+            <h1>Responsive layouts don’t have to be a struggle</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            <a href="#" class="btn">i want to learn</a>
         </div>
     </div>
+  </div>
 </body>
 </html>
