my solution to flexbox challenge 1

--- a/challenge02/index.html
+++ b/challenge02/index.html
@@ -20,5 +20,33 @@
         </div>
     </div>
   </div>
+  <div class="section">
+      <div class="row container">
+          <div class="col">
+              <h2 class="section__title">Cheap</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            </div>
+            <div class="col">
+                <h2 class="section__title">Quick</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            </div>
+            <div class="col">
+                <h2 class="section__title">Affordable</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            </div>
+        </div>
+    </div>
+    <div class="section-2">
+        <div class="row container">
+            <div class="col">
+              <h2 class="section-2__title">Cheap</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            </div>
+            <div class="col">
+                <h2 class="section-2__title">Quick</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
