kevins solution to flexbox challenge 1

--- a/challenge02/index.html
+++ b/challenge02/index.html
@@ -11,42 +11,54 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="hero">
+<div class="hero">
     <div class="container">
         <div class="hero__text">
             <h1>Responsive layouts don’t have to be a struggle</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam.</p>
             <a href="#" class="btn">i want to learn</a>
         </div>
     </div>
-  </div>
-  <div class="section">
-      <div class="row container">
-          <div class="col">
-              <h2 class="section__title">Cheap</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+</div>
+<section class="three-col">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h2 class="three-col__title">Cheap</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam.</p>
             </div>
             <div class="col">
-                <h2 class="section__title">Quick</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                <h2 class="three-col__title">Quick</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam.</p>
             </div>
             <div class="col">
-                <h2 class="section__title">Affordable</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                <h2 class="three-col__title">Affordable</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam.</p>
             </div>
         </div>
     </div>
-    <div class="section-2">
-        <div class="row container">
+</section>
+<section class="two-col">
+    <div class="container">
+        <div class="row">
             <div class="col">
-              <h2 class="section-2__title">Cheap</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                <h2 class="two-col__title">Cheap</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. Ut enim ad minim veniam.</p>
             </div>
             <div class="col">
-                <h2 class="section-2__title">Quick</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                <h2 class="two-col__title">Quick</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. Ut enim ad minim veniam.</p>
             </div>
         </div>
     </div>
+</section>
 </body>
 </html>
