--- a/02-3 - challenge start/index.html
+++ b/02-3 - challenge start/index.html
@@ -9,37 +9,35 @@
 </head>
 <body>
     <div class="hero">
-        <div class="container row hero__container">
+        <div class="container row">
             <div class="hero__text">
-                <h1 class="hero__title">Responsive layouts don’t have to be a struggle</h1>
-                <p class="hero_p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                <h1>Responsive layouts don’t have to be a struggle</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                 <a href="#" class="btn">I want to learn</a>
             </div>
-            <div class="hero__img">
-                <img src="https://unsplash.it/386/292" alt="">
-            </div>
+            <img class="hero__img" src="https://unsplash.it/386/292" alt="">
         </div>
     </div>
-    <section class="row container section">
-        <div class="col section__article">
-            <h2 class="section__title">Quality designs made custom, on demand, just for you</h2>
+    <main class="main container row">
+        <section class="primary-content">
+            <h2 class="section-title">Quality designs made custom, on demand, just for you</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-        </div>
-        <div class="col sidebar">
+        </section>
+        <aside class="sidebar">
             <div>
-                <h2 class="sidebar__title">Cheap</h2>
-                <p class="sidebar__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                <h2 class="sidebar-title">Cheap</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
             </div>
             <div>
-                <h2 class="sidebar__title">Quick</h2>
-                <p class="sidebar__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                <h2 class="sidebar-title">Quick</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
             </div>
             <div>
-                <h2 class="sidebar__title">Quality</h2>
-                <p class="sidebar__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                <h2 class="sidebar-title">Quality</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
             </div>
-        </div>
-    </section>
+        </aside>
+    </main>
 </body>
 </html>
