add hero img to folders that were missing them

--- a/02-3 - challenge start/index.html
+++ b/02-3 - challenge start/index.html
@@ -15,7 +15,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                 <a href="#" class="btn">I want to learn</a>
             </div>
-            <img class="hero__img" src="https://unsplash.it/386/292" alt="">
+            <img class="hero__img" src="../img/hero-img.jpg" alt="White background with markup drawn layouts">
         </div>
     </div>
     <main class="main container row">
