--- a/challenge02/index.html
+++ b/challenge02/index.html
@@ -19,6 +19,7 @@
                 dolore magna aliqua. Ut enim ad minim veniam.</p>
             <a href="#" class="btn">i want to learn</a>
         </div>
+        <img src="../img/hero-img.jpg" alt="White background with markup drawn layouts">
     </div>
 </div>
 <section class="three-col">
