--- a/nav-challenge/index.html
+++ b/nav-challenge/index.html
@@ -34,7 +34,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
             <a href="#" class="btn">I want to learn</a>
           </div>
-          <img src="https://unsplash.it/600/400" alt="UX design sketches" class="hero__img">
+          <img src="../img/hero-img.jpg" alt="UX design sketches" class="hero__img">
         </div>
       </section>
       
