--- a/final-challenge/index.html
+++ b/final-challenge/index.html
@@ -33,9 +33,9 @@
   <div class="hero">
     <div class="container">
       <div class="row">
-        <h1 class="hero__title col">Responsive layouts don't have to be a struggle</h1>
-        <div class="hero__secondary-text col">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <h1 class="hero__title col">Responsive layouts <span class="title__secondary--color">don't have to be a struggle</span></h1>
+        <div class="col">
+          <p class="hero__secondary-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           <a class="action__button" href="#">i want to learn</a>
         </div>
       </div>
