completed section secondary

--- a/final-challenge/index.html
+++ b/final-challenge/index.html
@@ -67,7 +67,7 @@
         <div class="section__secondary--primary-section col">
           <h2 class="section__secondary--title">It doesn’t have to be so hard</h2>
             <p class="section__secondary--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-            <img src="img/hero-img.jpg" alt="UX markup designs">
+            <img class="section__secondary--img" src="img/hero-img.jpg" alt="UX markup designs">
             <p class="section__secondary--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
         </div>
         <div class="section__secondary--secondary__section col">
