completed footer and mobile to 700px layout complete

--- a/final-challenge/index.html
+++ b/final-challenge/index.html
@@ -92,32 +92,30 @@
     <div class="container">
       <h1 class="footer__title">just scratching the surface</h1>
       <nav class="footer--nav">
-        <div class="row">
-          <ul class="footer--about col">
-            <h2 class="footer__subtitle">About our company</h2>
-            <p class="footer__subtext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-          </ul>
-          <ul class="footer__primary--nav col">
-            <li class="footer__item footer__subtitle">Getting around</li>
-            <li class="footer__item">Home</li>
-            <li class="footer__item">About</li>
-            <li class="footer__item">Contact</li>
-          </ul>
-          <ul class="footer__two--nav col">
-            <li class="footer__item footer__subtitle">Other things</li>
-            <li class="footer__item">Lorem ipsum</li>
-            <li class="footer__item">dolor</li>
-            <li class="footer__item">sit amet</li>
-            <li class="footer__item">consectetur</li>
-          </ul>
-          <ul class="footer__three--nav col">
-            <li class="footer__item footer__subtitle">And more</li>
-            <li class="footer__item">Lorem ipsum</li>
-            <li class="footer__item">dolor</li>
-            <li class="footer__item">sit amet</li>
-            <li class="footer__item">consectetur</li>
-          </ul>
-        </div>
+        <ul class="footer--about col">
+          <h2 class="footer__subtitle">About our company</h2>
+          <p class="footer__subtext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+        </ul>
+        <ul class="footer__primary--nav col">
+          <li class="footer__subtitle">Getting around</li>
+          <li class="footer__item">Home</li>
+          <li class="footer__item">About</li>
+          <li class="footer__item">Contact</li>
+        </ul>
+        <ul class="footer__two--nav col">
+          <li class="footer__subtitle">Other things</li>
+          <li class="footer__item">Lorem ipsum</li>
+          <li class="footer__item">dolor</li>
+          <li class="footer__item">sit amet</li>
+          <li class="footer__item">consectetur</li>
+        </ul>
+        <ul class="footer__three--nav col">
+          <li class="footer__subtitle">And more</li>
+          <li class="footer__item">Lorem ipsum</li>
+          <li class="footer__item">dolor</li>
+          <li class="footer__item">sit amet</li>
+          <li class="footer__item">consectetur</li>
+        </ul>
       </nav>
     </div>
   </footer>
