completed the nav for 700px+

--- a/final-challenge/index.html
+++ b/final-challenge/index.html
@@ -10,7 +10,7 @@
 <body>
   <header class="header">
     <div class="container">
-      <div class="hamburger__container">
+      <div class="hamburger__container row">
         <button class="nav-toggle">
           <span class="hamburger"></span>
         </button>
