completed section secondary 700px

--- a/final-challenge/index.html
+++ b/final-challenge/index.html
@@ -34,7 +34,7 @@
     <div class="container">
       <div class="row">
         <h1 class="hero__title col">Responsive layouts <span class="title__secondary--color">don't have to be a struggle</span></h1>
-        <div class="col">
+        <div class="col hero__text">
           <p class="hero__secondary-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           <a class="action__button" href="#">i want to learn</a>
         </div>
@@ -45,15 +45,15 @@
   <section class="section__primary">
     <div class="container">
       <div class="row">
-        <div class="col">
+        <div class="col section-article-one">
           <h2 class="section__title">Mobile-first</h2>
           <p class="section__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
         </div>
-        <div class="col">
+        <div class="col section-article-two">
           <h2 class="section__title">Efficient</h2>
           <p class="section__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
         </div>
-        <div class="col">
+        <div class="col section-article-three">
           <h2 class="section__title">Done right</h2>
           <p class="section__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
         </div>
@@ -71,15 +71,15 @@
             <p class="section__secondary--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
         </div>
         <div class="section__secondary--secondary__section col">
-          <div class="article">
+          <div class="article article-one">
             <h2 class="secondary__section--secondary__title">Break it down</h2>
             <p class="secondary__section--secondary__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
-          <div class="article">
+          <div class="article article-two">
             <h2 class="secondary__section--secondary__title">Work your way up</h2>
             <p class="secondary__section--secondary__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
-          <div class="article">
+          <div class="article article-three">
             <h2 class="secondary__section--secondary__title">Be patient</h2>
             <p class="secondary__section--secondary__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
