completed the project

--- a/final-challenge/index.html
+++ b/final-challenge/index.html
@@ -32,9 +32,9 @@
 
   <div class="hero">
     <div class="container">
-      <div class="row">
-        <h1 class="hero__title col">Responsive layouts <span class="title__secondary--color">don't have to be a struggle</span></h1>
-        <div class="col hero__text">
+      <div class="hero__container">
+        <h1 class="hero__title">Responsive layouts <span class="title__secondary--color">don't have to be a struggle</span></h1>
+        <div class="hero__text">
           <p class="hero__secondary-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           <a class="action__button" href="#">i want to learn</a>
         </div>
@@ -63,14 +63,14 @@
 
   <section class="section__secondary">
     <div class="container">
-      <div class="row">
-        <div class="section__secondary--primary-section col">
+      <div class="section__secondary--row">
+        <div class="section__secondary--primary-section">
           <h2 class="section__secondary--title">It doesn’t have to be so hard</h2>
             <p class="section__secondary--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
             <img class="section__secondary--img" src="img/hero-img.jpg" alt="UX markup designs">
             <p class="section__secondary--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
         </div>
-        <div class="section__secondary--secondary__section col">
+        <div class="section__secondary--secondary__section">
           <div class="article article-one">
             <h2 class="secondary__section--secondary__title">Break it down</h2>
             <p class="secondary__section--secondary__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
